# 6502_emu

./: CMakeLists.txt  README.md  gitignore
src/: CMakeLists.txt  cpu.cpp  cpu.hpp  inst.cpp  inst.hpp  main.cpp
tests/: CMakeLists.txt  test.cpp  test.hpp
